--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -10,8 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:typeface="sans"
-        android:text="nihaoma" />
+        android:typeface="sans" />
 
     <TextView
         android:id="@+id/memo"
