--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/custom_list"
+        android:id="@+id/event_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:fastScrollEnabled="false"
         android:dividerHeight="1dp" />
 
 </LinearLayout>
