--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -11,13 +11,17 @@
             android:layout_width="match_parent"
             android:layout_height="260dp"
             android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
             android:id="@+id/calendarView" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView2" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5" />
 
         <EditText
             android:layout_width="match_parent"
@@ -36,37 +40,39 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="50">
 
-            <TimePicker
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/timePicker"
-                android:layout_weight="30" />
+                android:text="Set Time"
+                android:id="@+id/button5"
+                android:layout_weight="50"
+                android:onClick="setTimeClicked" />
 
-            <LinearLayout
-                android:orientation="vertical"
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="70">
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:id="@+id/button3"
+                android:onClick="addClicked"
+                android:layout_weight="50" />
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Add"
-                    android:id="@+id/button3"
-                    android:layout_weight="50"
-                    android:onClick="addClicked" />
+        </LinearLayout>
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Events"
-                    android:id="@+id/button4"
-                    android:layout_weight="50"
-                    android:onClick="eventsClicked" />
-            </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="50">
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Events"
+                android:id="@+id/button4"
+                android:onClick="eventsClicked" />
         </LinearLayout>
 
     </LinearLayout>
